Пофіксив swagger. Змінив назви роутів. Видалив непотрібні обєкти у відповідях post.drinks/favorite та delete.drinks/favorite:id
